@@ -5,7 +5,7 @@
  * under the terms of the GNU General Public License. See docs/COPYING
  * for more information.
  *
- * $Id: driver.c,v 1.24 2007-09-13 10:49:57 cmatsuoka Exp $
+ * $Id: driver.c,v 1.25 2007-09-14 13:49:33 cmatsuoka Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -904,7 +904,7 @@ int xmp_drv_loadpatch (FILE *f, int id, int basefreq, int flags,
 
 #if 0
     /* dump patch to file */
-    if (id == 2) {
+    if (id == 8) {
 	printf("dump patch\n");
 	FILE *f = fopen("patch_data", "w");
 	fwrite(patch->data, 1, xxs->len, f);
